Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 <pre><code>&lt;img src="images/A.jpg" data-hovr="images/B.jpg" width="16" height="16" border="0" /&gt;
 </code></pre>
 
-<p><br>
-TimThumb Integration</p>
+<p><br><strong>TimThumb Integration</strong></p>
 
 <pre><code>$('img.hovr').hovr({
     timThumb: true,
@@ -56,8 +55,7 @@ TimThumb Integration</p>
 <pre><code>&lt;img src="images/A.jpg" class="hovr" /&gt;
 </code></pre>
 
-<p><br>
-Complete Options</p>
+<p><br><strong>Complete Options</strong></p>
 
 <pre><code>$('img.hovr').hovr({
     speed:           'normal',
@@ -70,6 +68,13 @@ Complete Options</p>
     //http://www.binarymoon.co.uk/2012/02/complete-timthumb-parameters-guide/
 });
 </code></pre>
+
+<p><br></p>
+
+<h2>
+<a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
+
+<p><a href="http://concept211.com/hovr/demo.html" target="_blank">Online Demo</a></p>
         </section>
 
         <aside id="sidebar">
